@@ -2712,6 +2712,18 @@ DUMMY(MONS_GIANT, 'C', LIGHTGREY, "giant")
     MONUSE_OPEN_DOORS, SIZE_GIANT, MON_SHAPE_HUMANOID
 },
 
+{
+    MONS_JUGGERNAUT, 'C', LIGHTGREEN, "juggernaut",
+    M_FIGHTER | M_WARM_BLOOD | M_SEE_INVIS | M_SPEAKS,
+    MR_NO_FLAGS,
+    12, MONS_GIANT, MONS_JUGGERNAUT, MH_NATURAL, 120,
+    { {AT_HIT, AF_PLAIN, 120}, AT_NO_ATK, AT_NO_ATK, AT_NO_ATK },
+    { 20, 7, 3, 0 },
+    20, 10, MST_NO_SPELLS, CE_CLEAN, S_SHOUT,
+    I_HUMAN, HT_LAND, 15, ATTACK_ENERGY(45),
+    MONUSE_OPEN_DOORS, SIZE_GIANT, MON_SHAPE_HUMANOID
+},
+
 // dragons ('D')
 DUMMY(MONS_DRAGON, 'D', GREEN, "dragon")
 
